<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QuizAppProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">welcome</string>
    <string name="lets_rockin">lets rockin</string>
    <string name="test_your_knowledge_of_the_arts_with_our_app">Test your knowledge of the arts with our app</string>
    <string name="you_re_nail_it_lets_dive_back_in">You’re nail it. Lets dive back in</string>
    <string name="your_quiz">Your Quiz</string>
    <string name="all_quiz">All Quiz</string>
    <string name="ceramics">Ceramics</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="broaden_your_art_knowledge_here">Broaden your art knowledge here!</string>
    <string name="discover_your_artistic_side_with_every_answer">Discover your artistic side with every answer</string>
    <string name="this_is_your_chance_to_test_your_knowledge_of_the_world_s_greatest_artists_and_masterpieces_from_painting_to_sculpture_from_ancient_to_contemporary_we_ve_got_it_all_covered_get_ready_to_unleash_your_inner_artist_and_discover_your_hidden_talent_for_art_good_luck">This is your chance to test your knowledge of the world\'s greatest artists and masterpieces. From painting to sculpture, from ancient to contemporary, we\'ve got it all covered. Get ready to unleash your inner artist and discover your hidden talent for art. Good luck!</string>
    <string name="_1_5">1/5</string>
    <string name="qestions">Qestions</string>
    <string name="answer2">answer2</string>
    <string name="answer3">answer3</string>
    <string name="answer1">answer1</string>
    <string name="answer4">answer4</string>
    <string name="next_questions">Next questions</string>
    <string name="result">Result</string>
    <string name="restart">restart</string>
    <string name="menu">Menu</string>
    <string name="_4_5">4/5</string>
    <string name="art">Art</string>
    <string name="language">Language</string>
    <string name="science">Science</string>
    <string name="history">History</string>
    <string name="music">Music</string>
    <string name="paiting">Painting</string>
    <string name="sculpture">Sculpture</string>
    <string name="photography">Photography</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="sociology">Sociology</string>
    <string name="economics">Economics</string>
    <string name="political_science">Political Science</string>
    <string name="worl_wars">World Wars</string>
    <string name="ancient_civilizations">Ancient Civilizations</string>
    <string name="classical_music">Classical Music</string>
    <string name="pop_music">Pop Music</string>
    <string name="hip_hop_music">Hip-Hop Music</string>
    <string name="hip_hop_questions">Who is considered one of the pioneers of hip-hop and is known for the song \'Rapper\'s Delight\'?</string>
    <string name="hip_hop_answer1">Run-D.M.C.</string>
    <string name="hip_hop_answer2">Grandmaster Flash and the Furious Five</string>
    <string name="hip_hop_answer3">The Sugarhill Gang</string>
    <string name="hip_hop_answer4">N.W.A</string>
    <string name="hip_hop_answer5">Tupac Shakur</string>
    <string name="hip_hop_answer6">Jay-Z</string>
    <string name="hip_hop_answer7">Eminem</string>
    <string name="hip_hop_answer8">Nas</string>
    <string name="hip_hop_answer9">Scratching</string>
    <string name="hip_hop_answer10">Breakdancing</string>
    <string name="hip_hop_answer11">Graffiti</string>
    <string name="hip_hop_answer12">Beatboxing</string>
    <string name="hip_hop_answer13">Ice Cube</string>
    <string name="hip_hop_answer14">Snoop Dogg</string>
    <string name="hip_hop_answer15">Dr. Dre</string>
    <string name="hip_hop_answer16">Notorious B.I.G.</string>
    <string name="hip_hop_question2">Which rapper released the album \'The Marshall Mathers LP\'?</string>
    <string name="hip_hop_question3">What is the term for the vocal percussion involving sounds, beats, and rhythms in hip-hop music?</string>
    <string name="hip_hop_question4">Who is known for the hit album \'The Chronic\' and his association with Death Row Records?</string>
    <string name="pop_music_question1">Who is often referred to as the \'King of Pop\'?</string>
    <string name="pop_music_question2">Which female artist released the hit single \'Umbrella\' featuring Jay-Z?</string>
    <string name="pop_music_question3">Which British band is known for the song \'Yellow\'?</string>
    <string name="pop_music_question4">Who sang the pop anthem \'I Will Always Love You\'?</string>
    <string name="classic_music_question1">Who composed the famous composition \'Moonlight Sonata\'?</string>
    <string name="classic_music_question2">Which composer is known for \'The Four Seasons\'?</string>
    <string name="classic_music_question3">What musical instrument is Yo-Yo Ma famous for playing?</string>
    <string name="classic_music_question4">Which composer is associated with the opera \'The Magic Flute\'?</string>
    <string name="ancient_question1">Which ancient civilization is known for building the pyramids at Giza?</string>
    <string name="ancient_question2">What ancient civilization is credited with the invention of writing known as cuneiform?</string>
    <string name="ancient_question3">Which ancient civilization is famous for the creation of the Great Wall?</string>
    <string name="ancient_question4">In which ancient civilization were the first Olympic Games held?</string>
    <string name="world_war_question1">Which event is often considered the catalyst for the start of World War I?</string>
    <string name="world_war_question2">During which years did World War II take place?</string>
    <string name="world_war_question3">What term is commonly used to describe the economic and political tensions between the United States and the Soviet Union during the second half of the 20th century?</string>
    <string name="world_war_question4">In which year did Germany officially reunify following the end of the Cold War?</string>
    <string name="political_science_question1">What is the term for the system of government in which power is vested in the people, who rule either directly or through freely elected representatives?</string>
    <string name="political_science_question2">Who is often regarded as the father of modern political science and is known for his book \'The Politics\'?</string>
    <string name="political_science_question3">What is the term for the authority and power held by an individual or group within a society?</string>
    <string name="political_science_question4">Which branch of government is responsible for interpreting the laws and ensuring they are applied fairly?</string>
    <string name="economic_question1">What is the term for the study of how individuals and societies allocate their limited resources to satisfy their unlimited wants?</string>
    <string name="economic_question2">Who is often regarded as the father of modern economics and is known for his book \'The Wealth of Nations\'?</string>
    <string name="economic_question3">Which economic system relies on private ownership of the means of production and free-market competition?</string>
    <string name="economic_question4">What is the term for the total value of all goods and services produced by a country in a given period?</string>
    <string name="sociology_question1">What is the term for the scientific study of human society, including patterns of social relationships, social interaction, and culture?</string>
    <string name="sociology_question2">Who is often regarded as the father of sociology and is known for his study of the social order and cooperation?</string>
    <string name="sociology_question3">Which theory in sociology emphasizes the importance of symbols, language, and non-verbal communication in understanding human behavior and society?</string>
    <string name="sociology_question4">What term describes the process by which individuals and groups change each other and how society changes individuals and groups?</string>
    <string name="art_paiting_question1">Who is the author of the painting \'Mona Lisa\'?</string>
    <string name="art_paiting_question2">Which painting style is characterized by bright colors and the reflection of light?</string>
    <string name="art_paiting_question3">What is the painting technique that uses oil paints?</string>
    <string name="art_paiting_question4">Who is famous for his surrealist works, including \'The Persistence of Memory\'?</string>
    <string name="art_sculpture_question1">Who is the author of the painting \'Mona Lisa\'?</string>
    <string name="art_sculpture_questio2" tools:ignore="MissingTranslation">Which painting style is characterized by bright colors and the reflection of light?</string>
    <string name="art_sculpture_question3">What is the painting technique that uses oil paints?</string>
    <string name="art_sculpture_question4">Who is famous for his surrealist works, including \'The Persistence of Memory\'?</string>
    <string name="english_question1">Which word is the correct spelling?</string>
    <string name="english_question2">What is the past tense of the verb \'to go\'?</string>
    <string name="english_question3">Which of the following is a pronoun?</string>
    <string name="english_question4">What is the plural form of \'child\'?</string>
    <string name="spain_question1">How many letters are there in the Spanish alphabet?</string>
    <string name="spain_question2">Which verb in Spanish means \'to be\'?</string>
    <string name="spain_question3">What is the English translation for \'hola\'?</string>
    <string name="spain_question4">Which is the largest Spanish-speaking country in the world by population?</string>
    <string name="pop_music_answer1">Elvis Presley</string>
    <string name="pop_music_answer2">Michael Jackson</string>
    <string name="pop_music_answer3">Prince</string>
    <string name="pop_music_answer4">David Bowie</string>
    <string name="pop_music_answer5">Beyoncé</string>
    <string name="pop_music_answer6">Katy Perry</string>
    <string name="pop_music_answer7">Rihanna</string>
    <string name="pop_music_answer8">Adele</string>
    <string name="pop_music_answer9">Coldplay</string>
    <string name="pop_music_answer10">The Beatles</string>
    <string name="pop_music_answer11">Radiohead</string>
    <string name="pop_music_answer12">Queen</string>
    <string name="pop_music_answer13">Whitney Houston</string>
    <string name="pop_music_answer14">Mariah Carey</string>
    <string name="pop_music_answer15">Celine Dion</string>
    <string name="pop_music_answer16">Madonna</string>
    <string name="classic_music_answer1">Wolfgang Amadeus Mozart</string>
    <string name="classic_music_answer2">Ludwig van Beethoven</string>
    <string name="classic_music_answer3">Johann Sebastian Bach</string>
    <string name="classic_music_answer4">Franz Schubert</string>
    <string name="classic_music_answer5">Antonio Vivaldi</string>
    <string name="classic_music_answer6">Pyotr Ilyich Tchaikovsky</string>
    <string name="classic_music_answer7">Johannes Brahms</string>
    <string name="classic_music_answer8">Igor Stravinsky</string>
    <string name="classic_music_answer9">Violin</string>
    <string name="classic_music_answer10">Flute</string>
    <string name="classic_music_answer11">Cello</string>
    <string name="classic_music_answer12">Piano</string>
    <string name="classic_music_answer13">Richard Wagner</string>
    <string name="classic_music_answer14">Giuseppe Verdi</string>
    <string name="classic_music_answer15">Wolfgang Amadeus Mozart</string>
    <string name="classic_music_answer16">Giacomo Puccini</string>
    <string name="anient_answer1" tools:ignore="MissingTranslation">Mesopotamia</string>
</resources>