<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".fragment.ResultFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="130dp"
            android:text="@string/result"
            android:textColor="@color/white_text"
            android:textSize="40sp"/>



        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="80dp"
            android:text="@string/_4_5"
            android:textColor="@color/white_text"
            android:textSize="46sp"
            android:textStyle="bold"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_restart"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cornerRadius="60dp"
            app:layout_constraintTop_toBottomOf="@id/tv_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/restart"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/blue"
            android:textAllCaps="false"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cornerRadius="60dp"
            app:layout_constraintTop_toBottomOf="@id/btn_restart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="30dp"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="false"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>