<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".fragment.IntroductionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_name_category"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="140dp"/>


        <TextView
            android:id="@+id/tv_name_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/art"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_discover"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_name_category"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/discover_your_artistic_side_with_every_answer"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_marginTop="40dp"
            />


        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_discover"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/this_is_your_chance_to_test_your_knowledge_of_the_world_s_greatest_artists_and_masterpieces_from_painting_to_sculpture_from_ancient_to_contemporary_we_ve_got_it_all_covered_get_ready_to_unleash_your_inner_artist_and_discover_your_hidden_talent_for_art_good_luck"
            android:textColor="@color/white_text"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="40dp"
            android:text="@string/lets_rockin"
            android:layout_marginHorizontal="20dp"
            app:cornerRadius="30dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:backgroundTint="@color/blue"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>