<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".fragment.HoeScreenFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="10dp">


            <ImageView
                android:id="@+id/img_union"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/union_1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="340dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/tv_lets_dive"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/img_union"
                app:layout_constraintStart_toStartOf="@id/img_union"
                android:text="@string/you_re_nail_it_lets_dive_back_in"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lets_dive"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_1"
                    android:layout_width="174dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="20dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/white"
                    >

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_quiz"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"/>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_2"
                    android:layout_width="174dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="14dp"
                    app:cardBackgroundColor="@color/backround_black"
                    >

                    <TextView
                        android:id="@+id/tv_name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_quiz"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="300dp"
                tools:listitem="@layout/item_home_1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>